# P_RoboAI_SImulator

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  requirements.txt
p_roboai_studio/: amr_panel.py  arm_panel.py  build_windows.bat  gemini_panel.py  main.py  main_window.py  mujoco_viewport.py  p_roboai_studio.spec  protocol_panel.py  requirements.txt  rl_env.py  rl_panel.py  rl_trainer.py  run.sh  urdf_loader.py  yolo_detector.py  yolo_panel.py
src/p_roboai_gemini/: package.xml  setup.py
src/p_roboai_gemini/launch/: gemini.launch.py
src/p_roboai_gemini/p_roboai_gemini/: gemini_robot_node.py  rag_engine.py  real2sim_bridge.py  sim2real_bridge.py
src/p_roboai_nav2/: package.xml  setup.cfg  setup.py
src/p_roboai_nav2/p_roboai_nav2/: costmap.py  global_planner.py  local_planner.py  nav_node.py
src/p_roboai_protocols/: package.xml  setup.py
src/p_roboai_protocols/launch/: protocols.launch.py
src/p_roboai_protocols/p_roboai_protocols/: canopen_bridge.py  dds_config.py  ethercat_bridge.py  grpc_bridge.py  modbus_bridge.py  mqtt_bridge.py  opcua_bridge.py  profinet_bridge.py  protocol_manager_node.py  websocket_bridge.py
src/p_roboai_protocols/proto/: robot_service.proto
src/p_roboai_rl/: package.xml  setup.py
src/p_roboai_rl/launch/: amr_rl.launch.py  arm_rl.launch.py
src/p_roboai_rl/p_roboai_rl/: amr_rl_node.py  arm_rl_node.py
src/p_roboai_slam/: package.xml  setup.cfg  setup.py
src/p_roboai_slam/p_roboai_slam/: occupancy_grid.py  scan_matcher.py  slam_node.py
src/p_roboai_viz/: CMakeLists.txt  package.xml
src/p_roboai_viz/include/p_roboai_viz/: displays_panel.hpp  main_window.hpp  map_view.hpp  mujoco_3d_view.hpp  status_panel.hpp
src/p_roboai_viz/launch/: viz.launch.py
src/p_roboai_viz/src/: displays_panel.cpp  main.cpp  main_window.cpp  map_view.cpp  mujoco_3d_view.cpp  status_panel.cpp
src/p_roboai_yolo/: package.xml  setup.py
src/p_roboai_yolo/launch/: yolo.launch.py
src/p_roboai_yolo/p_roboai_yolo/: yolo_node.py
src/robot_amr_mujoco_sim/: package.xml  setup.cfg  setup.py
src/robot_amr_mujoco_sim/launch/: amr_full.launch.py
src/robot_amr_mujoco_sim/models/: amr_warehouse.xml
src/robot_amr_mujoco_sim/robot_amr_mujoco_sim/: amr_mujoco_node.py
src/robot_amr_mujoco_sim/urdf/: amr_robot.urdf
src/robot_amr_sim/: package.xml  setup.cfg  setup.py
src/robot_amr_sim/launch/: amr_sim.launch.py
src/robot_amr_sim/robot_amr_sim/: amr_navigation_node.py  amr_sim_node.py
src/robot_arm_mujoco_sim/: package.xml  setup.cfg  setup.py
src/robot_arm_mujoco_sim/launch/: demo.launch.py  simulator.launch.py
src/robot_arm_mujoco_sim/models/: robot_arm.xml
src/robot_arm_mujoco_sim/robot_arm_mujoco_sim/: __init__.py  mujoco_sim_node.py  sine_commander_node.py
src/robot_arm_mujoco_sim/urdf/: robot_arm.urdf
src/robot_arm_qt_ui/: CMakeLists.txt  package.xml
src/robot_arm_qt_ui/include/robot_arm_qt_ui/: amr_panel.hpp  arm_control_panel.hpp  kinematics.hpp
src/robot_arm_qt_ui/launch/: desktop.launch.py  panel.launch.py
src/robot_arm_qt_ui/src/: amr_main.cpp  amr_panel.cpp  arm_control_panel.cpp  main.cpp
