<?xml version="1.0"?>
<package format="3">
  <name>p_roboai_slam</name>
  <version>0.1.0</version>
  <description>P_RoboAI custom SLAM: log-odds occupancy grid + correlative scan matching.</description>
  <maintainer email="user@example.com">P RoboAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
