<?xml version="1.0"?>
<package format="3">
  <name>robot_amr_mujoco_sim</name>
  <version>0.1.0</version>
  <description>3-D MuJoCo AMR simulator — diff-drive physics, mj_ray lidar, IMU.</description>
  <maintainer email="user@example.com">P RoboAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
